@@ -1,5 +1,13 @@
 2013-05-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/action_sequence_selector.cpp:
+	* src/qt4/action_sequence_selector.h:
+	* src/qt4/debug_message_window.cpp:
+	* src/qt4/debug_message_window.h:
+	- 親ウインドウを閉じた時に小ウインドウも自動で閉じられるようにした
+	- 表示メッセージ調整
+	- ウインドウサイズ調整
+
 	* src/model/action_sequence_log_parser.cpp:
 	- 行動列のデバッグ出力フォーマット変更に対応
 
